--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "ionicons-npm": "^2.0.1",
     "node-sass": "^3.7.0",
     "precss": "^1.4.0",
     "sass-loader": "^3.2.0",
